# maky

./: .gitmodules  Cargo.toml
data/: Maky.toml
data/src/: main_client.c
data/src/building/: building.c  building.h  building_hud.c  building_hud.h  building_renderer.c  building_renderer.h  building_types.h
data/src/character/: character.c  character.h  character_renderer.c  character_renderer.h  character_types.h
data/src/client/: game_data.c  game_data.h  game_data_serialization.c  game_data_serialization.h  game_state.c  game_state.h  map_data_serialization.c  map_data_serialization.h
data/src/connection/: client.c  client.h  server.c  server.h
data/src/game/: game.c  game.h  hud.c  hud.h
data/src/map/: map_renderer.c  map_renderer.h
data/src/menu/: menu.c  menu.h
data/src/packet/: client_packet.c  client_packet.h  packet.c  packet.h
data/src/server/: client_data.c  client_data.h  game_state.c  game_state.h
data/src/socket/: client.c  client.h  server.c  server.h  socket.c  socket.h
data/src/timer/: timer.c  timer.h
data/src/utils/: getopt.c
data/src/window/: animation.c  animation.h  input.c  input.h  window.c  window.h
src/: compile.rs  config.rs  link.rs  main.rs  pkg_config.rs
src/command/: build.rs  clean.rs  format.rs  init.rs  mod.rs  run.rs
src/command/format/: lexer.rs
src/config/: dependency.rs  features.rs  hash.rs  lib.rs  mod.rs  package.rs  specific.rs
src/file/: compile.rs  link.rs  mod.rs
test/cpp/: Maky.toml
test/cpp/src/: helloworld.cpp  helloworld.hpp  main.cpp
test/lib/src/: lib.c  lib.h  lib2.c  lib2.h  main.c
test/test-lib/: Maky.toml
test/test-lib/src/: main.c
