[package]
name = "maky"
version = "0.1.0"
edition = "2021"
authors = ["Aytixel"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.10.0"
string_template = "0.2.1"
aho-corasick = "1.1.3"
pretok = "0.1.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_with = "3.9.0"
toml = "0.8.19"
clap = { version = "4.5.16", features = ["derive"] }
parse-git-url = "0.5.1"
blake3 = "1.5.3"
crossterm = "0.28.1"
kdam = { version = "0.5.2", features = ["rich", "spinner"] }
hashbrown = { version = "0.14.5", features = ["serde", "rayon"] }
pkg-config = "0.3.30"
git2 = "0.19.0"
indoc = "2.0.5"
anyhow = "1.0.86"
glob = "0.3.1"
tokio = { version = "1.39.3", features = ["fs", "macros", "rt-multi-thread"] }
async-recursion = "1.1.1"
